// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders loader correctly 1`] = `
<div
  className="overflow-x-auto shadow-md sm:rounded-lg p-2"
>
  <button
    className="float-right bg-gray-500 mb-2 rounded p-1 text-white text-center"
    onClick={[MockFunction]}
  >
    New Kiosk
  </button>
  <table
    className="w-full text-sm text-left text-gray-500 text-gray-400"
  >
    <thead
      className="text-xs text-white uppercase bg-gray-50 bg-gray-700 text-gray-400"
    >
      <tr>
        <th
          className="px-6 py-3"
          scope="col"
        >
          ID
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Serial Key
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Description
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Is Closed?
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Opens at
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Closes at
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="bg-white border-b bg-gray-800 border-gray-700"
      >
        <th
          className="px-6 py-4 text-center"
          colSpan={7}
          scope="row"
        >
          Carregando
        </th>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`renders the kiosk list correctly 1`] = `
<div
  className="overflow-x-auto shadow-md sm:rounded-lg p-2"
>
  <button
    className="float-right bg-gray-500 mb-2 rounded p-1 text-white text-center"
    onClick={[MockFunction]}
  >
    New Kiosk
  </button>
  <table
    className="w-full text-sm text-left text-gray-500 text-gray-400"
  >
    <thead
      className="text-xs text-white uppercase bg-gray-50 bg-gray-700 text-gray-400"
    >
      <tr>
        <th
          className="px-6 py-3"
          scope="col"
        >
          ID
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Serial Key
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Description
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Is Closed?
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Opens at
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Closes at
        </th>
        <th
          className="px-6 py-3"
          scope="col"
        >
          Actions
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        className="bg-white border-b bg-gray-800 border-gray-700"
      >
        <th
          className="px-6 py-4"
          scope="row"
        >
          1
        </th>
        <td
          className="px-6 py-4"
        >
          NDK-1
        </td>
        <td
          className="px-6 py-4"
        >
          Burguer King
        </td>
        <td
          className="px-6 py-4"
        >
          No
        </td>
        <td
          className="px-6 py-4"
        >
          09:00
        </td>
        <td
          className="px-6 py-4"
        >
          22:00
        </td>
        <td
          className="px-6 py-4"
        >
          <button
            className="bg-white rounded p-1 mr-2"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="bg-white rounded p-1"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
      <tr
        className="bg-white border-b bg-gray-800 border-gray-700"
      >
        <th
          className="px-6 py-4"
          scope="row"
        >
          2
        </th>
        <td
          className="px-6 py-4"
        >
          NDK-2
        </td>
        <td
          className="px-6 py-4"
        >
          Mac
        </td>
        <td
          className="px-6 py-4"
        >
          No
        </td>
        <td
          className="px-6 py-4"
        >
          09:00
        </td>
        <td
          className="px-6 py-4"
        >
          22:00
        </td>
        <td
          className="px-6 py-4"
        >
          <button
            className="bg-white rounded p-1 mr-2"
            onClick={[Function]}
          >
            Edit
          </button>
          <button
            className="bg-white rounded p-1"
            onClick={[Function]}
          >
            Delete
          </button>
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
